@startuml Class_Diagram

skinparam classAttributeIconSize 0
skinparam backgroundColor white
skinparam roundcorner 5
skinparam shadowing false
skinparam defaultFontSize 11

class User {
  + id : Integer
  + email : String {unique}
  + name : String
  + role : String
  + phone : String
  + profile_image : ImageField
  + biography : Text
  + is_staff : Boolean
  + is_active : Boolean
  + two_factor_enabled : Boolean
  + two_factor_secret : String
  + date_joined : DateTime
  + updated_at : DateTime
  --
  + generate_2fa_secret() : String
  + get_2fa_uri() : String
  + verify_2fa_code(code) : Boolean
  + __str__() : String
}

class Student {
  + student_id : Integer
  + admission_number : String {unique}
  + full_name : String
  + gender : String
  + parent_name : String
  + parent_email : String
  + parent_phone : String
  + status : String
  + is_active : Boolean
  + created_at : DateTime
  + updated_at : DateTime
  --
  + __str__() : String
}

class Classroom {
  + class_id : Integer
  + name : String
  + academic_year : String
  + is_active : Boolean
  + created_at : DateTime
  + updated_at : DateTime
  --
  + __str__() : String
}

class StudentEnrollment {
  + enrollment_id : Integer
  + academic_year : String
  + enrollment_date : Date
  + is_active : Boolean
  --
  + __str__() : String
}

class Subject {
  + subject_id : Integer
  + name : String {unique}
  + code : String {unique}
  + created_at : DateTime
  --
  + __str__() : String
}

class TeachingAssignment {
  + assignment_id : Integer
  + is_active : Boolean
  + created_at : DateTime
  --
  + __str__() : String
}

class AttendanceSession {
  + session_id : Integer
  + attendance_date : Date
  + created_at : DateTime
  + updated_at : DateTime
  --
  + __str__() : String
}

class AttendanceRecord {
  + record_id : Integer
  + status : String
  + remarks : Text
  + created_at : DateTime
  --
  + __str__() : String
}

class StudentRiskProfile {
  + risk_score : Decimal
  + risk_level : String
  + last_calculated : DateTime
  + created_at : DateTime
  --
  + __str__() : String
}

class SubjectRiskInsight {
  + total_sessions : Integer
  + absence_count : Integer
  + late_count : Integer
  + absence_rate : Decimal
  + last_calculated : DateTime
  + created_at : DateTime
  --
  + __str__() : String
}

class Alert {
  + alert_id : Integer
  + alert_type : String
  + risk_level : String
  + status : String
  + escalated_to_admin : Boolean
  + alert_date : DateTime
  + updated_at : DateTime
  --
  + __str__() : String
}

class InterventionCase {
  + case_id : Integer
  + status : String
  + progress_status : String
  + follow_up_date : Date
  + meeting_date : Date
  + outcome_notes : Text
  + resolution_notes : Text
  + escalation_reason : Text
  + meeting_notes : Text
  + version : Integer
  + created_at : DateTime
  + updated_at : DateTime
  --
  + save() : void
  + __str__() : String
}

class InterventionMeeting {
  + meeting_date : Date
  + absence_reason : Text
  + root_cause : String
  + intervention_notes : Text
  + action_plan : Text
  + follow_up_date : Date
  + urgency_level : String
  + status : String
  + created_at : DateTime
  + updated_at : DateTime
  --
  + clean() : void
  + save() : void
  + __str__() : String
}

class ProgressUpdate {
  + update_text : Text
  + created_at : DateTime
  --
  + __str__() : String
}

class Message {
  + subject : String
  + message : Text
  + is_read : Boolean
  + created_at : DateTime
  + read_at : DateTime
  --
  + __str__() : String
}

User "1" -- "0..*" Classroom : manages >
User "1" -- "0..*" TeachingAssignment : teaches >
User "1" -- "0..*" AttendanceSession : creates >
User "1" -- "0..*" Alert : assigned >
User "1" -- "0..*" InterventionCase : handles >
User "1" -- "0..*" InterventionMeeting : conducts >
User "1" -- "0..*" ProgressUpdate : creates >
User "1" -- "0..*" Message : sends >
User "1" -- "0..*" Message : receives >

Student "1" -- "0..*" StudentEnrollment : enrolls >
Student "1" -- "1" StudentRiskProfile : has >
Student "1" -- "0..*" SubjectRiskInsight : analyzed >
Student "1" -- "0..*" AttendanceRecord : records >
Student "1" -- "0..*" Alert : triggers >
Student "1" -- "0..*" InterventionCase : subject >
Student "1" -- "0..*" InterventionMeeting : participates >

Classroom "1" -- "0..*" StudentEnrollment : contains >
Classroom "1" -- "0..*" TeachingAssignment : hosts >
Classroom "1" -- "0..*" AttendanceSession : held >

Subject "1" -- "0..*" TeachingAssignment : taught >
Subject "1" -- "0..*" AttendanceSession : subject >
Subject "1" -- "0..*" SubjectRiskInsight : tracked >
Subject "1" -- "0..*" Alert : related >

AttendanceSession "1" -- "0..*" AttendanceRecord : contains >

Alert "1" -- "0..*" InterventionCase : triggers >

InterventionMeeting "1" -- "0..*" ProgressUpdate : tracks >

note right of User
  Roles: admin, teacher, form_master
  Supports 2FA authentication
end note

note right of StudentRiskProfile
  Risk Levels:
  - Low (0-29)
  - Medium (30-54)
  - High (55-74)
  - Critical (75+)
end note

note right of AttendanceRecord
  Status: present, absent,
  late, excused
end note

note right of Alert
  Types: attendance,
  behavior, academic
  
  Status: active, under_review,
  escalated, resolved, dismissed
end note

@enduml
